--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,16 @@
       <version>${jsonp-version}</version>
     </dependency>
     <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>21.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.24</version>
+    </dependency>
+    <dependency>
       <groupId>fish.payara.extras</groupId>
       <artifactId>payara-micro</artifactId>
       <version>${payara-version}</version>
@@ -43,12 +53,20 @@
   <build>
     <plugins>
       <plugin>
-        <!-- watch out Payara micro needs you to have built a war first -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>2.3</version>
         <configuration>
           <failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.6.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
     </plugins>
