--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,11 @@
   <artifactId>micro-foobar</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
-  <packaging>war</packaging>
+  <packaging>pom</packaging>
+
+  <modules>
+    <module>sample-rest</module>
+  </modules>
 
   <properties>
     <cdi-version>1.2</cdi-version>
@@ -47,7 +51,7 @@
       <groupId>fish.payara.extras</groupId>
       <artifactId>payara-micro</artifactId>
       <version>${payara-version}</version>
-      <type>jar</type>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
