--- a/sample-rest/pom.xml
+++ b/sample-rest/pom.xml
@@ -13,4 +13,69 @@
   <artifactId>sample-rest</artifactId>
   <packaging>war</packaging>
 
+  <dependencies>
+    <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-core</artifactId>
+      <scope>compile</scope>
+      <version>1.5.3</version>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>com.github.kongchen</groupId>
+        <artifactId>swagger-maven-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <apiSources>
+            <apiSource>
+              <basePath>/</basePath>
+              <springmvc>false</springmvc>
+              <locations>kiwi.ergo.foobar.jaxrs</locations>
+              <info>
+                <title>Swagger Maven Plugin Sample</title>
+                <version>v1</version>
+                <!-- use markdown here because I'm using markdown for output,
+                if you need to use html or other markup language, you need to use your target language,
+                 and note escape your description for xml -->
+                <description>
+                  This is a sample.
+                </description>
+                <license>
+                  <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+                  <name>Apache 2.0</name>
+                </license>
+              </info>
+              <!-- Support classpath or file absolute path here.
+              1) classpath e.g: "classpath:/markdown.hbs", "classpath:/templates/hello.html"
+              2) file e.g: "${basedir}/src/main/resources/markdown.hbs",
+                  "${basedir}/src/main/resources/template/hello.html" -->
+              <templatePath>${basedir}/templates/strapdown.html.hbs</templatePath>
+              <outputPath>${basedir}/target/generated/document.html</outputPath>
+              <swaggerDirectory>generated/swagger-ui</swaggerDirectory>
+            </apiSource>
+          </apiSources>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>compile</phase>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          </execution>
+        </executions>
+        <dependencies>
+          <!-- Adding dependency to swagger-hibernate-validations to enable the BeanValidator as a custom
+               model converter -->
+          <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-hibernate-validations</artifactId>
+            <version>1.5.6</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+    </plugins>
+  </build>
 </project>
