--- a/sample-rest/pom.xml
+++ b/sample-rest/pom.xml
@@ -52,7 +52,7 @@
               1) classpath e.g: "classpath:/markdown.hbs", "classpath:/templates/hello.html"
               2) file e.g: "${basedir}/src/main/resources/markdown.hbs",
                   "${basedir}/src/main/resources/template/hello.html" -->
-              <templatePath>${basedir}/templates/strapdown.html.hbs</templatePath>
+              <templatePath>${basedir}/../swagger-maven-example/templates/strapdown.html.hbs</templatePath>
               <outputPath>${basedir}/target/generated/document.html</outputPath>
               <swaggerDirectory>generated/swagger-ui</swaggerDirectory>
             </apiSource>
