--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
   <modules>
     <module>sample-rest</module>
-    <module>gateway</module>
+    <module>gateway-acceptor</module>
   </modules>
 
   <properties>
