--- a/gateway-acceptor/pom.xml
+++ b/gateway-acceptor/pom.xml
@@ -26,6 +26,12 @@
       <artifactId>quickfixj-messages-fix44</artifactId>
       <version>${quickfixj.version}</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit-version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
