--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <jaxrs-version>2.0.1</jaxrs-version>
     <jsonp-version>1.0</jsonp-version>
     <payara-version>4.1.1.171</payara-version>
+    <junit-version>4.12</junit-version>
   </properties>
 
   <dependencies>
@@ -59,6 +60,12 @@
       <artifactId>payara-micro</artifactId>
       <version>${payara-version}</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit-version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <build>
