--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <jsonp-version>1.0</jsonp-version>
     <payara-version>4.1.1.171</payara-version>
     <junit-version>4.12</junit-version>
+    <mockito-version>2.7.21</mockito-version>
   </properties>
 
   <dependencies>
@@ -67,6 +68,12 @@
       <version>${junit-version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${mockito-version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <pluginManagement>
@@ -99,6 +106,18 @@
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.7</version>
+        <configuration>
+          <formats>
+            <format>html</format>
+            <format>xml</format>
+          </formats>
+          <check/>
         </configuration>
       </plugin>
       <plugin>
