Increased coverage of Application, slit out dummy
Dummy implementation of MarketDataProvider

--- a/gateway-acceptor/src/main/resources/config/quickfixj/executor.cfg
+++ b/gateway-acceptor/src/main/resources/config/quickfixj/executor.cfg
@@ -6,7 +6,7 @@ StartTime=07:00:00 Asia/Tokyo
 EndDay=Friday
 EndTime=17:00:00 US/Eastern
 HeartBtInt=60
-ValidOrderTypes=1,2,F
+ValidOrderTypes=1,2
 SenderCompID=EXEC
 TargetCompID=BANZAI
 UseDataDictionary=Y
